--- a/fancybox_messagePreview.htm
+++ b/fancybox_messagePreview.htm
@@ -46,7 +46,7 @@
                                     <tr>
                                         <th>回覆內容</th>
                                         <td>
-                                            <div>
+                                            <div tabindex="0">
                                             您好：(輸入的內容要能換行)<br>
                                             已協助完成續借10片，另將寄送有聲書<br>
                                             天涯雙探 第一冊 : 青衣奇盜<br>
