--- a/tpmlblind_memberlist.htm
+++ b/tpmlblind_memberlist.htm
@@ -90,8 +90,8 @@
                                     <div class="tag">
                                         審核狀態： 
                                         <ul>
-                                            <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">待審核</a></li>
+                                            <li><a href="#">全部</a></li>
+                                            <li class="active"><a href="#">待審核</a></li>
                                             <li><a href="#">審核通過</a></li>
                                             <li><a href="#">審核不通過</a></li>
                                         </ul>
@@ -128,8 +128,8 @@
                                                     <th>會員帳號</th>
                                                     <th>姓名</th>
                                                     <th>電子信箱</th>
-                                                    <th class="text-left">審核狀態</th>
                                                     <th>註冊日期</th>
+                                                    <th class="text-left">審核狀態</th>
                                                     <th>最後編修/審核帳號</th>
                                                     <th>最後編修/審核日期</th>
                                                     <th>編輯</th>
@@ -142,8 +142,8 @@
                                                     <td data-title="身分證/帳號">K123456789</td>
                                                     <td data-title="姓名"><a href="tpmlblind_memberEdit.htm" title="編輯會員資料">劉佳淇1</a></td>
                                                     <td data-title="電子郵件信箱">liucc@hyweb.com.tw</td>
+                                                    <td data-title="註冊日期"><time>2019/11/6 09:12</time></td>
                                                     <td data-title="審核狀態">待審核</td>
-                                                    <td data-title="註冊日期"><time>2019/11/6</time></td>
                                                     <td data-title="審核帳號"></td>
                                                     <td data-title="審核日期"><time></time></td>
                                                     <td data-title="編輯">
@@ -157,10 +157,10 @@
                                                     <td data-title="身分證/帳號">K123456789</td>
                                                     <td data-title="姓名"><a href="tpmlblind_memberEdit.htm" title="編輯會員資料">劉佳淇2</a></td>
                                                     <td data-title="電子郵件信箱">liucc@hyweb.com.tw</td>
+                                                    <td data-title="註冊日期"><time>2019/10/16 10:10</time></td>
                                                     <td data-title="審核狀態">審核通過</td>
-                                                    <td data-title="註冊日期"><time>2019/10/16</time></td>
                                                     <td data-title="審核帳號">liuccadmin</td>
-                                                    <td data-title="審核日期"><time>2019/10/167</time></td>
+                                                    <td data-title="審核日期"><time>2019/10/17 16:21</time></td>
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
                                                             <a href="tpmlblind_memberEdit.htm" class="btn" title="會員資料編輯-劉佳淇2"><i class="i_edit"></i>編輯</a>
@@ -172,10 +172,10 @@
                                                     <td data-title="身分證/帳號">K123456789</td>
                                                     <td data-title="姓名"><a href="tpmlblind_memberEdit.htm" title="編輯會員資料">劉佳淇2</a></td>
                                                     <td data-title="電子郵件信箱">liucc@hyweb.com.tw</td>
+                                                    <td data-title="註冊日期"><time>2019/10/16 11:11</time></td>
                                                     <td data-title="審核狀態">審核不通過</td>
-                                                    <td data-title="註冊日期"><time>2019/10/16</time></td>
                                                     <td data-title="審核帳號">liuccadmin</td>
-                                                    <td data-title="審核日期"><time>2019/10/167</time></td>
+                                                    <td data-title="審核日期"><time>2019/10/17 14:21</time></td>
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
                                                             <a href="tpmlblind_memberEdit.htm" class="btn" title="會員資料編輯-劉佳淇2"><i class="i_edit"></i>編輯</a>
