--- a/tpmlblind_messagelist.htm
+++ b/tpmlblind_messagelist.htm
@@ -91,13 +91,13 @@
                                         留言類別： 
                                         <ul>
                                             <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">借書留言</a></li>
-                                            <li><a href="#">其他問題</a></li>
+                                            <li><a href="#">借書留言 (732)</a></li>
+                                            <li><a href="#">其他問題 (90)</a></li>
                                         </ul>
-                                        回覆狀態： 
+                                        ｜回覆狀態： 
                                         <ul>
-                                            <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">待回覆</a></li>
+                                            <li><a href="#">全部</a></li>
+                                            <li class="active"><a href="#">待回覆</a></li>
                                             <li><a href="#">已回覆</a></li>
                                         </ul>
                                     </div>
@@ -147,13 +147,43 @@
                                                     <td data-title="身分證/帳號">借書留言</td>
                                                     <td data-title="標題"><a href="tpmlblind_messageEdit.htm" title="編輯留言資料">我想借書(續借有聲書，家裡尚有九片，謝謝)</a></td>
                                                     <td data-title="姓名">劉佳淇</td>
-                                                    <td data-title="留言日期"><time>2019/11/6</time></td>
+                                                    <td data-title="留言日期"><time>2019/11/17 09:20</time></td>
                                                     <td data-title="回覆狀態">待回覆</td>
                                                     <td data-title="回覆帳號"></td>
                                                     <td data-title="回覆日期"><time></time></td>
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
-                                                            <a href="tpmlblind_messageEdit.htm" class="btn" title="留言資料編輯-劉佳淇"><i class="i_edit"></i>編輯</a>
+                                                            <a href="tpmlblind_messageEdit.htm" class="btn" title="編輯劉佳淇留言"><i class="i_edit"></i>編輯</a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num" data-title="序號">2</td>
+                                                    <td data-title="身分證/帳號">借書留言</td>
+                                                    <td data-title="標題"><a href="tpmlblind_messageEdit.htm" title="編輯留言資料">我想借書(續借有聲書，家裡尚有九片，謝謝)</a></td>
+                                                    <td data-title="姓名">劉佳淇2</td>
+                                                    <td data-title="留言日期"><time>2019/11/16 13:21</time></td>
+                                                    <td data-title="回覆狀態">已回覆</td>
+                                                    <td data-title="回覆帳號">liuccadmin</td>
+                                                    <td data-title="回覆日期"><time>2019/11/16 16:21</time></td>
+                                                    <td data-title="編輯">
+                                                        <div class="btn_grp">
+                                                            <a href="tpmlblind_messageEdit.htm" class="btn" title="編輯劉佳淇2留言"><i class="i_edit"></i>編輯</a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num" data-title="序號">3</td>
+                                                    <td data-title="身分證/帳號">其他問題</td>
+                                                    <td data-title="標題"><a href="tpmlblind_messageEdit.htm" title="編輯留言資料">我想借書(續借有聲書，家裡尚有九片，謝謝)</a></td>
+                                                    <td data-title="姓名">劉佳淇</td>
+                                                    <td data-title="留言日期"><time>2019/11/15 11:21</time></td>
+                                                    <td data-title="回覆狀態">已回覆</td>
+                                                    <td data-title="回覆帳號">liuccadmin</td>
+                                                    <td data-title="回覆日期"><time>2019/11/16 12:21</time></td>
+                                                    <td data-title="編輯">
+                                                        <div class="btn_grp">
+                                                            <a href="tpmlblind_messageEdit.htm" class="btn" title="編輯留言者姓名留言"><i class="i_edit"></i>編輯</a>
                                                         </div>
                                                     </td>
                                                 </tr>
