--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -1,7 +1,7 @@
 <aside>
     <h1>
         <a href="index.htm">
-            <img src="images/W_logo.png" alt=""><span>W CMS Lite<br>網站管理平台</span>
+            <img src="images/tpml_logo.png" alt=""><span>W CMS Lite<br>網站管理平台</span>
         </a>
     </h1>
     <a href="#AL" title="左方導覽區塊" accesskey="L" class="accesskey">:::</a>
@@ -130,8 +130,12 @@
                     <span>客製化功能</span>
                 </a>
                 <ul>
-                    <li><a href="tpmlblind_memberlist.htm"><span>會員管理</span></a></li>
-                    <li><a href="#"><span>留言版管理</span></a></li>
+                    <li><a href="tpmlkids_recommentBooksList.htm"><span>(兒童)好書推薦管理</span></a></li>
+                    <li><a href="sysQA_list.htm"><span>(兒童)小博士信箱管理</span></a></li>
+                    <li><a href="tpmlblind_memberlist.htm"><span>(視障)會員管理</span></a></li>
+                    <li><a href="tpmlblind_messagelist.htm"><span>(視障)留言版管理</span></a></li>
+                    <li><a href="tpmlblind_drlist.htm"><span>(視障)博士通問答管理</span></a></li>
+                    <li><a href="#"><span>(視障)博士通答題清單</span></a></li>
                 </ul>
             </li>
         </ul>
