--- a/index_list.html
+++ b/index_list.html
@@ -473,6 +473,18 @@
                     </tr>
                     <tr>
                         <td></td>
+                        <td>(兒童網)小博士信箱管理</td>
+                        <td>
+                            <ul>
+                                <li>小博士問答條列清單 <a href="sysQA_list.htm" target="_blank"></a></li>
+                                <li>問答管理－新增 <a href="sysQA_add.htm" target="_blank"></a>｜編修 <a href="sysQA_edit.htm" target="_blank"></a></li>
+                                <li>答案審核－答題列表 <a href="sysQA_answerList.htm" target="_blank"></a>｜讀者答題審核 <a href="sysQA_userinfo.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td></td>
                         <td>(視障網)借閱證(會員)／留言版管理</td>
                         <td>
                             <p style="color:red;">註：12/9更新留言版，並必須擴充留言類型</p>
@@ -484,6 +496,19 @@
                             </ul>
                         </td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td>(視障網)博士通信箱管理</td>
+                        <td>
+                            <ul>
+                                <li>問答清單 <a href="tpmlblind_drlist.htm" target="_blank"></a></li>
+                                <li>問答新增／編修 <a href="#" target="_blank"></a></li>
+                                <li>審核答題清單 <a href="#" target="_blank"></a>｜審核答題 <a href="#" target="_blank"></a></li>
+                                <li>補單(紙本答題輸入) <a href="#" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+
                 </tbody>
             </table>
         </div>
