--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -1,7 +1,7 @@
 <aside>
     <h1>
         <a href="index.htm">
-            <img src="images/tpml_logo.png" alt=""><span>W CMS Lite<br>網站管理平台</span>
+            <img src="images/tpml_logo.png" alt=""><span>北市圖主題網<br>網站管理平台</span>
         </a>
     </h1>
     <a href="#AL" title="左方導覽區塊" accesskey="L" class="accesskey">:::</a>
